sumo/tests/netconvert/errors/testsuite.netconvert
# Tests what happens if the output can not be written
false_output

# Tests what happens if no output is given
no_output

# Tests what happens if an unknown option is given
unknown_option


# Tests for broken XML input
XML






